--- a/assets/_scss/_syntax.scss
+++ b/assets/_scss/_syntax.scss
@@ -6,7 +6,7 @@ div.highlighter-rouge, figure.highlight {
   position: relative;
   margin-bottom: 1em;
   padding: 1em;
-  border: .5px solid $border-color;
+  border: 1px solid $border-color;
   border-radius: $border-radius;
   background-color: $code-background-color;
   box-shadow: $box-shadow;
@@ -19,7 +19,7 @@ div.highlighter-rouge, figure.highlight {
     background-color: $lighter-gray;
     content: "\f121";
     font-family: "fontawesome" !important;
-    font-size: $type-size-5;
+    font-size: $type-size-6;
     line-height: 1;
     text-transform: none;
     speak: none;
@@ -28,12 +28,12 @@ div.highlighter-rouge, figure.highlight {
   .highlight {
     margin: 0;
     font-family: $monospace;
-    font-size: $type-size-6;
+    font-size: $type-size-7;
     line-height: 1.8;
   }
 }
 
-.highlight table td { padding: 3px; }
+.highlight table td { padding: 5px; }
 .highlight table pre { margin: 0; }
 
 
