--- a/assets/_scss/_syntax.scss
+++ b/assets/_scss/_syntax.scss
@@ -1,7 +1,7 @@
 /* ==========================================================================
    Syntax highlighting
    ========================================================================== */
-
+/*
 div.highlighter-rouge, figure.highlight {
   position: relative;
   margin-bottom: 1em;
@@ -35,7 +35,7 @@ div.highlighter-rouge, figure.highlight {
 
 .highlight table td { padding: 5px; }
 .highlight table pre { margin: 0; }
-
+*/
 
 /*
    Solarized Light
