--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -57,7 +57,7 @@ a:focus {
 html {
   /* apply a natural box layout model to all elements */
   box-sizing: border-box;
-  background-color: #ffff66;
+  background-color: #fff;
   font-size: 16px;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%; }
@@ -1219,7 +1219,7 @@ tr, td, th {
 .greedy-nav {
   position: relative;
   min-width: 250px;
-  background: #ffff66; }
+  background: #fff; }
   .greedy-nav a {
     display: block;
     margin: 0 1rem;
